--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ code {
   margin: 0;
   padding: 0;
   font-family: "Baloo Bhai 2", cursive;
+  /* font-family: "Segoe UI"; */
   -webkit-tap-highlight-color: transparent;
 }
 
