--- a/src/pages/settings/Settings.module.css
+++ b/src/pages/settings/Settings.module.css
@@ -7,7 +7,7 @@
   font-size: large;
   width: 80%;
   margin: auto;
-  height: 75vh;
+  height: 470px;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
