--- a/src/Components/Message/message.module.css
+++ b/src/Components/Message/message.module.css
@@ -1,9 +1,10 @@
 .error,
 .successful {
   border-radius: 4px;
-  font-size: 1.4rem;
-  padding: 0.3rem;
+  font-size: 1.5rem;
+  padding: 0.2rem 0.4rem;
   transition: all 0.3s ease-in-out;
+  font-weight: 500;
 }
 
 .error {
@@ -12,4 +13,12 @@
 
 .successful {
   background-color: var(--success-msg);
+}
+
+.blue {
+  background-color: blue;
+}
+
+.skyblue {
+  background-color: rgb(9, 141, 193);
 }
