--- a/src/pages/settings/components/session/session.module.css
+++ b/src/pages/settings/components/session/session.module.css
@@ -27,14 +27,20 @@
 }
 
 .big-img {
-  font-size: 4rem;
+  font-size: 5rem;
   padding-right: 1rem;
+  width: 5.5rem;
 }
 
 .session-name {
   display: flex;
   align-items: center;
   gap: 0.8rem;
+}
+
+.device-img {
+  width: 100%;
+  height: 100%;
 }
 
 @media screen and (max-width: 850px) {
